<resources>
    <string name="app_name" translatable="false">Combee</string>
    <string name="logo">Logo</string>

    <string name="bg_home_description">Haidresser image</string>
    <string name="home_title">Discover your freedom</string>
    <string name="welcome">Welcome</string>
    <string name="register">Sign up</string>
    <string name="connect">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="please_fill_all">You must complete all input before submit</string>
    <string name="wrong_email">Please, fill in a correct email</string>
    <string name="strong_password">Your password is too easy, please fill in stronger password</string>

    <string name="gender">Gender</string>
    <string name="price">Price</string>
    <string name="price_1" translatable="false">€</string>
    <string name="price_2" translatable="false">€€</string>
    <string name="price_3" translatable="false">€€€</string>

    <string name="confirm">Confirm</string>

    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="child">Child</string>

    <string name="see_more">See more</string>

    <string name="list_to_business_id" translatable="false">business_id_passed</string>
    <string name="server_path" translatable="false">https://combeeapi.azurewebsites.net/api/v1.0/</string>
    <string name="combee_path" translatable="false">https://combee.me/</string>
</resources>
